--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,10 @@
 }
 
 :root {
+    --blue:#000080;
+    --ligth-blue:#0753aa;
+    --ligth-blue2:#116ed8;
+    --ligth-blue3:#308af1ea;
     --purple-200: #9a7bd1;
     --purple-500: #6b36c8;
     --purple-800: #441f88;
@@ -25,10 +29,11 @@
 html {
     width: 100%;
     height: 100vh;
+    background: linear-gradient(to bottom, var(--blue),var(--ligth-blue),var(--ligth-blue2), var(--ligth-blue3));
 }
 
 body {
-    background: var(--gray-200);
+   background: linear-gradient(to bottom, var(--blue),var(--ligth-blue),var(--ligth-blue2), var(--ligth-blue3));
     color: var(--black-800);
     
 }
@@ -38,14 +43,14 @@ body {
    text-align: center;
    padding: 12px 32px;
    background: none;
-   border: 1px solid var(--purple-800);
-   color: var(--purple-800);
+   border: 1px solid var(--ligth-blue3);
+   color: var(--ligth-blue3);
    border-radius: 10px;
    font-weight: 700;
 }
 
 .botao:hover {
-   background: var(--purple-800);
+   background: var(--ligth-blue);
    color: var(--white);
 }
 
@@ -65,10 +70,12 @@ h2{
 }
 
 p{
-    font-size: 1rem;
-    line-height: 1.5rem;
+    font-size: 1.2rem;
+    line-height: 2rem;
     text-align: justify;
     padding: 0.5rem 0;
+    margin-bottom: 50px;
+    font-weight: bold;
 }
 
 
@@ -88,14 +95,26 @@ p{
 /* Estilização da Seção Header */
 
 #header_content{
-    height: 80px;
-    position: sticky;
-    top: 0;
-    width: 100%;
-    justify-content: space-between;
-    padding: 24px;
-    background-color: var(--purple-800);
-    border-bottom: 1px solid var(--purple-500);
+      height: 80px;
+      position: sticky;
+      top: 0;
+      width: 100%;
+      justify-content: space-between;
+      padding: 40px;
+      background-color: var(--blue);
+      border-bottom: 1px solid var(--ligth-blue3);
+}
+
+#logo{
+      display: flex;
+      justify-content: left;
+      align-items: center;
+      gap: 10px;
+}
+
+#icon_logo{
+   width: 55px;
+   height: 55px;
 }
 
 #menu li{
@@ -111,7 +130,7 @@ p{
 }
 
 #menu li a:hover{
-    color: var(--purple-200);
+    color: var(--ligth-blue3);
     
 }
 
@@ -137,10 +156,13 @@ h4 {
    
 }
 
-.home_container h4 {
+.home_container p {
+   color: var(--gray-200);
    font-size: 16px;
    font-weight: bold;
    margin: 16px 0;
+   font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+   
 }
 
 .home_container h1 {
@@ -149,10 +171,17 @@ h4 {
    font-weight: bold;
 }
 
-.home_container p {
+.home_container h2 {
    margin: 16px 0;
    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-   font-weight: bold;
+   font-size: 20px;
+   font-style: normal;
+   text-shadow: 
+   0 0 5px #5f91ceb0,        /* Brilho neon azul */
+   0 0 10px #9cbfe7bd,
+   0 0 15px #adb7c47c;
+  
+   text-align: center;
 }
 
 .home_container .botao {
@@ -167,45 +196,97 @@ h4 {
 }
 
 .home_content_img {
-   width: 500px; 
-   height: 350px;
+   width: 200px; 
+   height: 200px;
 }
 
  /* Estilização da Seção About */
 
  #about{
     flex-direction: column;
-    margin: 2rem auto;
+    margin: 8rem auto;
     width: 90%;
  }
 
  #conteudo{
+   display: flex;
+    justify-content: center;
     flex-direction: row;
     gap: 2rem;
  }
 
- #list{
+
+
+ #table {
    display: flex;
    flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   margin: 20px auto;
+  
  }
 
- #list li{
-   display: inline;
-     
+ #table table{
+   font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+   font-size: 20px;
+   padding: 12px;
  }
 
- #list li:hover{
+ #table table thead tr td{
+   padding-bottom: 35px;
+   text-align: center;
+   font-weight: bold;
+   font-size: 22px;
+}
+
+
+#table table thead tr th{
+   padding-bottom: 12px;
+   text-align: left;
+   font-weight: bold;
+   font-size: 19px;
+}
+
+#table table tbody tr td{
+   padding-bottom: 10px;
+   font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+
+}
+
+#table table tbody tr td img{
+   margin-left: 10px;
+   vertical-align: middle;
+   height: 27px;
+   width: 27px;
+}
+
+#table tbody tr td:hover{
    display: inline;
-   color: var(--purple-500);
-     
+   color: var(--ligth-blue3);
+   font-weight: bold;
+   font-size: 20px;
+   
+ }
+ 
+ .border_table{
+   border: 2px solid black;
+ }
+
+ .align_table td{
+   justify-content: right;
+   padding-left: 120px;
+   padding-top: 10px;
  }
 
  .img_profile{
     width: 300px;
+    height: 300px;
+    border: 5px solid var(--ligth-blue2);
     border-radius: 200px;
+    margin-top: 15px;
+   
  }
  .img_profile:hover{
-   width: 350px;
    border-radius: 50px;
 }
 
@@ -224,7 +305,7 @@ h4 {
     margin: 0;
     padding: 2rem;
     color: var(--white);
-    background-color: var(--purple-500);
+    background: linear-gradient(to bottom, var(--blue),var(--ligth-blue),var(--ligth-blue2), var(--ligth-blue3));
     font-weight: bold;
     text-align: center;
  }
@@ -278,6 +359,7 @@ h4 {
  }
 
  form label{
+   color: var(--white);
     font-size: 1rem;
     text-align: left;
     font-weight: 500;
@@ -308,8 +390,8 @@ h4 {
  form button{
     text-align: center;
     padding: 0.75rem 2rem;
-    background: var(--purple-800);
-    border: 1px solid var(--purple-500);
+    background: var(--blue);
+    border: 1px solid var(--ligth-blue);
     color: var(--white);
     border-radius: 0.75rem;
     font-weight: 700;
@@ -317,7 +399,7 @@ h4 {
  }
 
  form button:hover{
-    background: var(--purple-500);
+    background: var(--ligth-blue3);
  }
 
  /* Estilização da seção mapa*/
@@ -325,10 +407,12 @@ h4 {
  #map{
     width: 480px;
     flex-direction: column;
-    gap: 3rem;
+    
  }
 
  #endereco >p{
+   margin: 2px;
+   color: var(--white);
     font-size: 1rem;
     text-align: justify;
     font-weight: 600;
